# fung_lab5

./: .gitignore  CMakeLists.txt
task1/: CMakeLists.txt  main.cpp
task1/include/: binary_int.hpp
task1/src/: binary_int.cpp
